<resources>
    <!-- Static String Resources in Portuguese    -->
    <string name="app_name">PickPlay</string>
    <string name="system_failed">O sistema falhou</string>
    <string name="system_failed_long_desc">
        Por algum motivo,
        não foi possível processar com essa solicitação.
        Por favor, tente novamente.
    </string>
    <string name="try_again">Tentar novamente</string>
    <string name="not_found">Esse filme não existe</string>
    <string name="not_found_long_desc">
        Não conseguimos encontrar o filme que você procura.
        Por favor, refaça sua busca.
    </string>
    <string name="search_mode">Modo pesquisa</string>
    <string name="back_home">Voltar ao início</string>
    <string name="all_movies">Todos os filmes</string>
    <string name="favorite">Favoritos</string>
    <string name="hint_search_for_movie">Pesquisar por um filme…</string>
    <string name="user_rating">Avaliação\ndos usuários</string>
    <string name="synopsis">Sinopse</string>
    <string name="cast">Elenco</string>
    <string name="star_icon_desc">Estrela</string>
    <string name="fab_desc">Retornar para página principal</string>
    <string name="not_found_icon_desc">Lupa de pesquisa não encontrada</string>
    <string name="btnClose_content_desc">Fechar Tela</string>
    <string name="ivGenericError_content_desc">Erro na Genérico</string>
    <string name="ivPerson_Director_desc">Perfil do Diretor</string>
    <string name="ivPerson_Actor_desc">Perfil do Ator</string>
</resources>