<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.SearchMoviesActivity">

    <SearchView
        android:id="@+id/svSearchQuery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:focusedByDefault="true"
        android:inputType="text"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="28dp"
        android:queryBackground="@drawable/bg_searchview_selector"
        android:queryHint="@string/hint_search_for_movie"
        android:submitBackground="@color/white"
        android:searchIcon="@drawable/ic_search_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivLine"
        android:layout_width="35dp"
        android:layout_height="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/ic_horizontal_line"
        app:layout_constraintBottom_toTopOf="@id/tvSearchMode"
        app:layout_constraintStart_toStartOf="@id/tvSearchMode" />

    <TextView
        android:id="@+id/tvSearchMode"
        style="@style/TextAppearance.MovieApp.Headline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/search_mode"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:layout_marginStart="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svSearchQuery" />

    <TextView
        android:id="@+id/tvBackHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_home"
        android:layout_marginStart="1dp"
        app:layout_constraintTop_toBottomOf="@id/tvSearchMode"
        app:layout_constraintStart_toStartOf="@id/tvSearchMode"
        style="@style/TextAppearance.MovieApp.Subtitle2" />

    <HorizontalScrollView
        android:id="@+id/hsvGenreList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBackHome"
        android:layout_marginTop="20dp"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cgGenreList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true"
            android:paddingStart="30dp"
            android:paddingEnd="10dp"
            app:chipSpacingHorizontal="15dp"
            app:singleSelection="true">
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovieList"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hsvGenreList"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/grpSearchNotFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="ivSearchError,tvSearchFailed,tvSearchFailedLongText">
    </androidx.constraintlayout.widget.Group>

    <ImageView
        android:id="@+id/ivSearchError"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_search_not_found"
        app:layout_constraintBottom_toTopOf="@+id/tvSearchFailed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/not_found_icon_desc" />

    <TextView
        android:id="@+id/tvSearchFailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_found"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/hsvGenreList"
        style="@style/TextAppearance.MovieApp.Headline1" />

    <TextView
        android:id="@+id/tvSearchFailedLongText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="4sp"
        android:paddingHorizontal="30dp"
        android:text="@string/not_found_long_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSearchFailed"
        style="@style/TextAppearance.MovieApp.Body1" />



</androidx.constraintlayout.widget.ConstraintLayout>

