<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.GenericErrorActivity"
    android:padding="30dp">

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivGenericError"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginBottom="36dp"
        android:background="@drawable/ic_generic_error"
        app:layout_constraintBottom_toTopOf="@+id/tvSystemFailed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvSystemFailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/system_failed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextAppearance.MovieApp.Headline1">
    </TextView>

    <TextView
        android:id="@+id/tvSystemFailedLongText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/system_failed_long_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSystemFailed"
        style="@style/TextAppearance.MovieApp.Body1">
    </TextView>

    <TextView
        android:id="@+id/tvTryAgain"
        style="@style/TextAppearance.MovieApp.Headline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:text="@string/try_again"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/ivLine"
        android:layout_width="40dp"
        android:layout_height="6dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_horizontal_line"
        app:layout_constraintTop_toBottomOf="@id/tvTryAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>